--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "body-parser": "^1.18.2",
+    "connect-timeout": "^1.9.0",
+    "express": "^4.16.1",
+    "sqlite3": "^3.1.13"
   }
 }
